Fix service card icon container height to align titles
The issue was that icon containers had height: auto, causing different heights based on each icon's aspect ratio (01_2x.png: 206x182, cloud_2x.png: 216x174, 03.png: 647x471, 04.png: 694x608). This resulted in misaligned service card titles.

Fixed by:
- Setting icon-container height to fixed 50px
- Setting icon height to fixed 95px with object-fit: contain

--- a/styles/components/cards.css
+++ b/styles/components/cards.css
@@ -82,8 +82,7 @@
 
 .service-card__icon-container {
     width: 117px;
-    height: auto;
-    min-height: 50px;
+    height: 50px;
     overflow: visible;
     flex-shrink: 0;
     display: flex;
@@ -95,9 +94,9 @@
 
 .service-card__icon {
     width: 107.6px;
+    height: 95px;
     position: relative;
-    max-height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     margin-top: -70px;
 }
 
